--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>QR Code Component</title>
 </head>
 <body>
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+ <main class="main">
+  <img src="/images/image-qr-code.png" class="main__image" alt="QR Code">
+  <h2 class="main__title">Improve your front-end skills by building projects</h2>  
+  <p class="main__para">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
+ </main> 
 </body>
 </html>
